--- a/client/src/components/portainer/PortainerSidebar.module.css
+++ b/client/src/components/portainer/PortainerSidebar.module.css
@@ -5,6 +5,7 @@
   border-radius: 8px;
   border: 1px solid var(--border-color);
   padding: 16px;
+  padding-bottom: 80px;
   display: flex;
   flex-direction: column;
   margin-top: 20px;
