--- a/client/src/components/portainer/PortainerStackGroup.module.css
+++ b/client/src/components/portainer/PortainerStackGroup.module.css
@@ -72,8 +72,8 @@ body.dark-mode .updateCount {
 
 .containersGrid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 16px;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 18px;
 }
 
 .containersGrid > * {
@@ -83,7 +83,7 @@ body.dark-mode .updateCount {
 
 @media (max-width: 1024px) {
   .containersGrid {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
