--- a/client/src/pages/SummaryPage/components/ContainerHealthOverview.module.css
+++ b/client/src/pages/SummaryPage/components/ContainerHealthOverview.module.css
@@ -274,9 +274,34 @@
   .chartAndStatsRow {
     flex-direction: column;
     align-items: stretch;
+    text-align: center;
   }
 
   .chartAndStatsRow .statsGrid {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .chartAndStatsRow {
+    align-items: center;
+  }
+
+  .chartAndStatsRow .statsGrid {
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+
+  .statItem {
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .statContent {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
   }
 }
