--- a/client/src/pages/SummaryPage/components/ImageStatistics.module.css
+++ b/client/src/pages/SummaryPage/components/ImageStatistics.module.css
@@ -283,7 +283,27 @@
 }
 
 @media (max-width: 640px) {
+  .chartAndStatsRow {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
   .chartAndStatsRow .statsGrid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+  }
+
+  .statItem {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .statContent {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    align-items: center;
   }
 }
