--- a/client/src/components/intents/IntentCard.module.css
+++ b/client/src/components/intents/IntentCard.module.css
@@ -304,4 +304,10 @@ body.dark-mode .dryRunAction:hover {
   .name {
     font-size: 0.95rem;
   }
+
+  /* Override global responsive.css min-width: 44px on buttons */
+  .actionButton,
+  .toggleButton {
+    min-width: unset;
+  }
 }
