--- a/client/src/components/portainer/ContainersTab.module.css
+++ b/client/src/components/portainer/ContainersTab.module.css
@@ -104,7 +104,8 @@ body.dark-mode .stackCount {
 
 .lastPullTime {
   font-size: 0.85rem;
-  color: var(--text-secondary);
+  color: var(--text-tertiary);
+  font-style: italic;
   text-align: right;
   margin-top: 20px;
   padding-right: 10px;
