--- a/client/src/components/portainer/UpdatesTab.module.css
+++ b/client/src/components/portainer/UpdatesTab.module.css
@@ -33,7 +33,8 @@
 
 .lastPullTime {
   font-size: 0.85rem;
-  color: var(--text-secondary);
+  color: var(--text-tertiary);
+  font-style: italic;
   text-align: right;
   margin-top: 20px;
   padding-right: 10px;
