--- a/client/src/components/settings/PortainerTab.module.css
+++ b/client/src/components/settings/PortainerTab.module.css
@@ -244,7 +244,6 @@ body.dark-mode .instanceDangerAction:hover {
   transition: all 0.2s;
   gap: 10px;
   height: 100%;
-  min-height: 120px;
 }
 
 .addInstanceCard:hover {
@@ -604,6 +603,10 @@ body.dark-mode .saveButton:hover:not(:disabled) {
   .instanceContent {
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .instanceFooter {
+    align-self: stretch;
   }
 
   .tokenContent {
