--- a/client/src/components/portainer/ContainersTab.module.css
+++ b/client/src/components/portainer/ContainersTab.module.css
@@ -86,6 +86,17 @@ body.dark-mode .stackCount {
   width: 100%;
 }
 
+.portainerGrid {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  gap: 18px;
+}
+
+.portainerGrid > * {
+  min-width: 0;
+  width: 100%;
+}
+
 .updatesEmpty {
   grid-column: 1 / -1;
   padding: 16px;
@@ -112,12 +123,20 @@ body.dark-mode .stackCount {
 }
 
 @media (max-width: 1024px) {
+  .portainerGrid {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .containersGrid {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (max-width: 768px) {
+  .portainerGrid {
+    grid-template-columns: 1fr;
+  }
+
   .stackGroup {
     margin-bottom: 16px;
   }
